fixed spacing

--- a/src/css/nav_bar.css
+++ b/src/css/nav_bar.css
@@ -30,13 +30,15 @@
     justify-content: center;
     padding-left: 10%;
     margin-left: 15%;
+    margin-top: 10%;
 }
 
 .grocery_list {
     align-self: center;
     justify-content: center;
-    margin-left: 17%;
+    margin-left: 10%;
     width: 90%;
+    margin-top: 45%;
 }
 
 .meal_plan {
@@ -58,8 +60,13 @@
     margin-left: 20%;
     width: 70%;
     padding-bottom: 0%;
+    margin-top: 15%;
 }
 
 #account {
     padding-top: 0%;
+}
+
+#navbar-background {
+    height: 12%;
 }
